fix(Table): update demo to show scrollbars correctly

--- a/demo/app/components/table/table.component.scss
+++ b/demo/app/components/table/table.component.scss
@@ -1,4 +1,8 @@
+@import '~@terminus/ui/helpers';
+
+
 .example-container {
   height: 400px;
   overflow: auto;
+  @include visible-scrollbars;
 }
